5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1706_3057.log
== TEST (2019-04-29 19:10:25) 
-- CODE:
temp=float(input(tempo))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp * 90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp * 100 + 5000

elif (temp>300):
	valor = temp * 110 + 6000

print (round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp=float(input(tempo))
NameError: name 'tempo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:10:51) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp * 90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp * 100 + 5000

elif (temp>300):
	valor = temp * 110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:11:04) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp * 90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp * 100 + 5000

elif (temp>300):
	valor = temp * 110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:11:42) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp*90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp*100 + 5000

elif (temp>300):
	valor = temp*110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:12:00) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp*90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp*100 + 5000

elif (temp>300):
	valor = temp*110 + 6000

print (round(valor,2))
-- EXECUTION TIME:
0.214619
-- TEST CASE 1:
---- input:
120
---- correct output:
14800.0
---- user output:
12600.0
-- TEST CASE 2:
---- input:
1
---- correct output:
3080.0
---- user output:
3080.0
-- TEST CASE 3:
---- input:
852
---- correct output:
99720.0
---- user output:
71160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:12:03) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp*90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp*100 + 5000

elif (temp>300):
	valor = temp*110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:13:25) 
-- CODE:
temp=float(input("tempo: "))

if((temp >= 0) or (temp < 100)):
	valor = temp*80+3000
	
elif ((temp >= 100) or (temp<200)):
	valor = temp*90 + 4000
	
elif ((temp >= 200) or (temp<300)):
	valor = temp*100 + 5000

elif (temp>300):
	valor = temp*110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:13:40) 
-- CODE:
temp=float(input("tempo: "))

if((temp >= 0) or (temp < 100)):
	valor = temp*80+3000
	
elif ((temp >= 100) or (temp<200)):
	valor = temp*90 + 4000
	
elif ((temp >= 200) or (temp<300)):
	valor = temp*100 + 5000

elif (temp>300):
	valor = temp*110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:14:15) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp * 90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp * 100 + 5000

elif (temp>300):
	valor = temp * 110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:14:26) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp * 90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp * 100 + 5000

elif (temp>300):
	valor = temp * 110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:14:38) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = temp*80+3000
	
elif (temp >= 100 or temp < 200):
	valor = temp * 90 + 4000
	
elif (temp >= 200 or temp < 300):
	valor = temp * 100 + 5000

elif (temp>300):
	valor = temp * 110 + 6000

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:15:19) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = (temp * 80 + 3000)
	
elif (temp >= 100 or temp < 200):
	valor = (temp * 90 + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = (temp * 100 + 5000)

elif (temp>300):
	valor = (temp * 110 + 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:15:47) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)
	
elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:17:12) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)
	
	elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
	elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

	elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 6
    elif (temp >= 100 or temp < 200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:17:22) 
-- CODE:
temp=float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)
	
elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:18:23) 
-- CODE:
temp=int(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)
	
elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:19:01) 
-- CODE:
temp=int(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)
	
		elif (temp >= 100 or temp < 200):
		valor = ((temp * 90) + 4000)
	
		elif (temp >= 200 or temp < 300):
		valor = ((temp * 100) + 5000)

		elif (temp>300):
		valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 6
    elif (temp >= 100 or temp < 200):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:26:26) 
-- CODE:
temp=int(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)
	
elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

else (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 12
    else (temp>300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:26:35) 
-- CODE:
temp=int(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)
	
elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:34:07) 
-- CODE:
temp=(float(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)

elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 3
    if(temp >= 0 or temp < 100):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:34:29) 
-- CODE:
temp=(int(input("tempo: "))

if(temp >= 0 or temp < 100):
	valor = ((temp * 80) + 3000)

elif (temp >= 100 or temp < 200):
	valor = ((temp * 90) + 4000)
	
elif (temp >= 200 or temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 3
    if(temp >= 0 or temp < 100):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:35:31) 
-- CODE:
temp=(int(input("tempo: "))

if((temp>=0) or (temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp >= 200) or (temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 3
    if((temp>=0) or (temp<100)):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:36:40) 
-- CODE:
temp=(int(input("tempo: "))

if((temp>=0) or (temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp >= 200) or (temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 3
    if((temp>=0) or (temp<100)):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:38:37) 
-- CODE:
temp=(input("tempo: "))

if((temp>=0) or (temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp >= 200) or (temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 9
    elif ((temp >= 200) or (temp < 300):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:38:48) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0) or (temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp >= 200) or (temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 9
    elif ((temp >= 200) or (temp < 300):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:39:10) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp >= 200) or (temp < 300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 9
    elif ((temp >= 200) or (temp < 300):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:39:39) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp>=200)or(temp<300):
	valor = ((temp * 100) + 5000)

elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 9
    elif ((temp>=200)or(temp<300):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:39:56) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
elif ((temp>=200)or(temp<300):
	valor = ((temp * 100) + 5000)
elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 8
    elif ((temp>=200)or(temp<300):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:40:05) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:40:16) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:40:23) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:42:10) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
elif (temp>=300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:43:39) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
	elif ((temp>=200)or(temp<300)):
		valor = ((temp * 100) + 5000)
			elif (temp>=300):
				valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 9
    elif ((temp>=200)or(temp<300)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:43:50) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
			elif (temp>=300):
				valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 11
    elif (temp>=300):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:43:59) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
			
	elif (temp>=300):
				valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 12
    elif (temp>=300):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:44:05) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)

elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	
elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
			
elif (temp>=300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:45:15) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)
   elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
   elif (temp>=300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 5
    elif ((temp >= 100) or (temp < 200)):
                                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:45:41) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)
   elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)
	elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
   elif (temp>=300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 5
    elif ((temp >= 100) or (temp < 200)):
                                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:48:09) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)
	
elif ((temp >= 100) or (temp < 200)):
valor = ((temp * 90) + 4000)

elif ((temp>=200)or(temp<300)):
valor = ((temp * 100) + 5000)

elif (temp>=300):
valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- ERROR:
File "XXXX", line 7
    valor = ((temp * 90) + 4000)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:48:36) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)
	
elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)

elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
	
elif (temp>=300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:48:50) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)
	
elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)

elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
	
elif (temp>=300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:49:46) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)
	
elif ((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)

elif ((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
	
elif (temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:50:00) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0)or(temp<100)):
	valor = ((temp * 80) + 3000)
	
elif((temp >= 100) or (temp < 200)):
	valor = ((temp * 90) + 4000)

elif((temp>=200)or(temp<300)):
	valor = ((temp * 100) + 5000)
	
elif(temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
12600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:51:33) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0) and (temp<100)):
	valor = ((temp * 80) + 3000)
	
elif((temp >= 100) and (temp < 200)):
	valor = ((temp * 90) + 4000)

elif((temp>=200) and (temp<300)):
	valor = ((temp * 100) + 5000)
	
elif(temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- OUTPUT:
14800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:51:45) 
-- CODE:
temp=float(input("tempo: "))

if((temp>=0) and (temp<100)):
	valor = ((temp * 80) + 3000)
	
elif((temp >= 100) and (temp < 200)):
	valor = ((temp * 90) + 4000)

elif((temp>=200) and (temp<300)):
	valor = ((temp * 100) + 5000)
	
elif(temp>300):
	valor = ((temp * 110)+ 6000)

print (round(valor,2))
-- EXECUTION TIME:
0.148251
-- TEST CASE 1:
---- input:
120
---- correct output:
14800.0
---- user output:
14800.0
-- TEST CASE 2:
---- input:
1
---- correct output:
3080.0
---- user output:
3080.0
-- TEST CASE 3:
---- input:
852
---- correct output:
99720.0
---- user output:
99720.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
